# design

./: LICENSE  flake.nix
rate-limiter/: go.mod  go.sum  skaffold.yaml
rate-limiter/checkout/cmd/checkout/: main.go
rate-limiter/checkout/pkgs/checkoutserver/: server.go
rate-limiter/checkout/proto/checkout/: checkout.pb.go  checkout.proto  checkout_grpc.pb.go
rate-limiter/deploy/checkout/: deployment.yml  service.yml
rate-limiter/deploy/redis/: configmap.yml  deployment.yml  roles.sh  service.yml  statefulset.yml  values.yml
rate-limiter/deploy/thanos/: deployment.yml  service.yml
rate-limiter/docker/: Dockerfile.leakybucket  Dockerfile.thanos
rate-limiter/leakybucket/: Cargo.toml
rate-limiter/leakybucket/src/: main.rs
rate-limiter/thanos/: Cargo.toml
rate-limiter/thanos/cmd/thanos/: main.go
rate-limiter/thanos/pkgs/thanosserver/: server.go
rate-limiter/thanos/proto/thanos/: thanos.pb.go  thanos.proto  thanos_grpc.pb.go
rate-limiter/thanos/src/: main.rs
