[package]
name = "thanos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version =  "1.2.0", features = ["full"] }
hyper-rustls = "0.26.0"
tokio = { version = "1.36.0", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
anyhow = "1.0.80"
